# Portfolio-for-coding-projects

./: Hospital DBMS web app
Hex Board Game with AI opponent/: HexBoardGameWithAI.cpp  README.md
Medipol Hospital DBMS web app/backend/: requirements.txt
Medipol Hospital DBMS web app/frontend/: README.md
Secret Encode and decode app/: README.md  desktop.ini  python_encode&decode_project.py
dsms/: CMakeLists.txt  desktop.ini
dsms/include/: api.h  models.h
dsms/src/: main.cpp
dsms/web/: styles.css
hospital_dbms-main/: README.md
hospital_dbms-main/backend/: app.py
hospital_dbms-main/frontend/src/: App.js  api.js
retail-management-dbms/: README.md  desktop.ini
retail-management-dbms/include/: json_util.h  models_fwd.h  repository.h  services.h
retail-management-dbms/src/: api_impl.cpp  services_impl.cpp
